# transaction_transformer

./: .gitignore  IMPLEMENTATION_TODO.md  LICENSE  Makefile  README.md  UNITTAB_CHANGES.md  comprehensive_data_leakage_check.py  inspect_data_leakage.py  pyproject.toml  requirements.txt
.cursor/rules/: project-overview.mdc
.github/workflows/: pretrain.yml
configs/: __init__.py  config.py  finetune.yaml  paths.py  pretrain.yaml  sweep.yaml
docs/: README.md  efficient_mlm_implementation.md
evaluation/: evaluate.py
models/: __init__.py
models/lightgbm/: lgb_eval.py  lgb_train.py  lightgbm_baseline.py
models/transformer/: __init__.py  transformer_model.py
scripts/: ar_pretrain.py  debug_masking.py  pca.py  test.py  test_data_loading.py  test_efficient_masking.py  test_modes.py  test_path_system.py  test_unittab_changes.py
src/transaction_transformer/: README_REFACTORING.md  __init__.py  clean_imports_example.py  example_usage.py  main.py
src/transaction_transformer/config/: README.md  __init__.py  config.py  example_usage.py  finetune.yaml  pretrain.yaml
src/transaction_transformer/data/: __init__.py  collator.py  dataset.py
src/transaction_transformer/modeling/: README.md  __init__.py
src/transaction_transformer/utils/: __init__.py  mlp.py  utils.py  wandb_utils.py
src/transaction_transformer/visualization/: __init__.py  eda.py
src/txn_model/: ar_pretrain.py  bert_pretrain.py  config.py  evaluate.py  finetune.py  lgb_predict.conf  lgb_train.conf  lgb_train.py  logging_utils.py  main.py  model.py  path_utils.py  pretrain.py  stream_evaluate.py  test.py  train.py  train_finetune.py  train_finetune_lstm.py  train_lightgbm.py  train_pretrain.py  utils.py
src/txn_model/configs/: finetune.yaml  pretrain.yaml  sweep.yaml
src/txn_model/data/: README.md  build_train_examples.py  collate.py  dataset.py  eda copy.py  eda.py  eda_report.html  finetune_preprocess.py  preprocessing.py  samplers.py  (+1 more)
tests/: __init__.py  test_pipeline.py
tests/integration/: __init__.py
tests/unit/: __init__.py  model_testing.py
training/: config_builder.py  data_collator.py  data_loader.py  finetune.py  logging_utils.py  pretrain.py  trainer.py
utils/: __init__.py  label_smoothing.py  masking.py  utils.py
(+114 files in other folders)
