[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction_transformer"
version = "0.1.0"
description = "An autoregressive Transformer for credit-card fraud detection"
authors = [
    { name = "Parker Pettit", email = "ppettit@mit.edu" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.8.0+cu129",
    "pandas==2.3.1",
    "numpy==2.3.2",
    "scikit-learn==1.7.1",
    "wandb==0.21.1",
    "pyyaml==6.0.2",
    "tqdm==4.67.1",
    "pyarrow==21.0.0",
    "fastparquet=2024.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "black==25.1.0",
    "flake8==7.3.0",
    "mypy==1.17.1"
]

[project.scripts]
pretrain = "transaction_transformer.modeling.training.pretrain:main"
finetune = "transaction_transformer.modeling.training.finetune:main"
evaluate_models = "transaction_transformer.modeling.training.evaluate_model:main"
run_preprocessing = "transaction_transformer.data.preprocessing.run_preprocessing:main"
upload_raw = "transaction_transformer.data.preprocessing.upload_raw_artifact:main"
